--- a/chapter_1.tex
+++ b/chapter_1.tex
@@ -3,7 +3,6 @@
 \section{بیان مسئله}
 محک شبیه‌سازهای مدار کوانتومی به دلیل تحول فناوری رایانش کوانتومی، ضروری است. نیاز اصلی به محک ازاین‌جهت ناشی می‌شود که لازم است عملکرد دستگاه‌ها و شبیه‌سازهای مختلف رایانش کوانتومی به طور سامان‌مند ارزیابی و مقایسه شود. با ادامهٔ توسعهٔ سخت‌افزار و الگوریتم‌های کوانتومی، محک‌های کارآمدتر، یک چارچوب ثابت برای ارزیابی بهبودها، شناسایی نقاط ضعف و هدایت تحقیقات و توسعه را فراهم می‌کنند. باتوجه‌به رویکردهای متنوع برای اصلاح و کاهش خطا در رایانش کوانتومی، محک‌ها می‌توانند اثربخشی این رویکرد‌ها را تحت شرایط مختلف برجسته کنند. این امر به پژوهشگران و توسعه‌دهندگان این امکان را می‌دهد که روش‌های خود را اصلاح کرده و دقت و قابلیت اطمینان کلی محاسبات کوانتومی را بهبود بخشند\cite{lubinski_application-oriented_2023}.
 
-\section{شکاف‌های پژوهشی}
 برخلاف پیشرفت‌های قابل‌توجه در رایانش کوانتومی، چندین شکاف در این حوزه وجود دارد که نیاز به توجه دارند. یکی از شکاف‌های برجسته، کمبود محک‌های جامع و عملکردگرا برای شبیه‌سازهای کوانتومی است. باوجود محک‌های متعدد 
 \cite{michielsen_benchmarking_2017, wright_benchmarking_2019, koch_demonstrating_2020, mills_application-motivated_2021, cornelissen_scalable_2021}،
 اغلب، گسترهٔ کاربردهای عملی پیش‌بینی‌شده برای رایانش کوانتومی را پوشش نمی‌دهند. کاربردهای پیش‌بینی‌شده شامل جست‌وجو در پایگاه‌داده‌های مرتب‌نشده، فاکتورکردن اعداد بزرگ به عوامل اول و مسائل بهینه‌سازی با تعداد متغیرهای قابل‌توجه هستند که اهمیت وجود رایانه‌های کوانتومی را در مسائل واقعی نشان می‌دهند. این شکاف نشان می‌دهد که نیاز به مجموعه‌ای متنوع‌تر از محک‌ها وجود دارد که منعکس‌کنندهٔ موارد استفاده واقعی باشند و بتوانند معیار دقیق‌تری از قابلیت‌های یک سامانه کوانتومی را ارائه دهند. 
@@ -19,7 +18,7 @@
 در پژوهش ما سعی شده است که باتوجه‌ به شرایط و امکانات موجود تا حد توان به این هدف پرداخته شود؛ اما به دلیل پیچیدگی زیاد مسئله، هنوز مشکلاتی از آن برطرف نشده است. هدف طراحی محک‌هایی است که با کم‌ترین تغییرات بتوان آن را بر روی همه شبیه‌سازها اعمال کرد. به همین دلیل، نیاز است روشی برای تبدیل تمامی الگوریتم‌ها به یک ساختار واحد که قابل‌پذیرش برای همهٔ شبیه‌سازها باشد، ارائه شود. با وجود تمامی پیچیدگی‌های این مسئله، برای پیداکردن چنین روشی در پژوهش ما گام برداشته شده است؛ این روش به طراحی یک واحد مترجم برای ترجمهٔ الگوریتم‌ها از یک‌زبان مبدأ به زبان مقصد که همان شبیه‌سازهای مختلف باشند، می‌پردازد. این در حالی است که تعداد زیاد شبیه‌سازها و عدم پیروی آن‌ها از یک رویکرد یکسان، طراحی این مترجم را پیچیده و مشکل می‌سازد.
 
 \section{روش پیشنهادی}
-در پژوهشما برای بهبود ضعف‌های موجود، مبناهای محک شبیه‌ساز به‌طورکلی متفاوت و جامع در نظر گرفته شده است. کارهای پیشین، اغلب به محک رایانه‌های واقعی کوانتومی پرداخته‌اند و توجه خاص به شبیه‌سازها کم‌تر دیده می‌شود. در اندک پژوهش‌هایی که به شبیه‌سازها نیز توجه کرده‌اند، معیارهای انتخاب‌شده برای محک، معیارهای مطلوبی در نظر گرفته نشده است. مطلوب از این بابت است که معیارها عموماً برای محک سخت‌افزار و عملکرد گیت‌ها به‌صورت مجزا انتخاب شده‌اند. معیارهای مطلوب معیارهایی هستند که برای محک شبیه‌سازها در زمان اجرای الگوریتم‌ها و بررسی عملکرد آن‌ها به‌طوری‌که همهٔ جنبه‌های مربوطه از تبدیل محاسبات کوانتومی به محاسبات کلاسیک تا ذخیره‌ٔ اطلاعات بدست آمده، در آن‌ها بررسی شود. علاوه‌بر معیار، با تعریف روش‌های بهتر محک، می‌توان به معیارهای مهم نظیر زمان اجرا و میزان مصرف حافظه، توجه ویژه‌ای داشت. در روش‌های محک شبیه‌سازها نیز کم‌تر به الگوریتم‌هایی که مسائل واقعی را حل می‌کنند توجه شده است درصورتی‌که مبنای محک در پژوهش ما انتخاب الگوریتم‌هایی بوده است که از آن در حل مسائل واقعی استفاده می‌شود. علاوه بر این‌ها، فرض پژوهش‌های پیشین بر آن بوده است که کاربران شبیه‌سازها تماماً به رایانه‌های پردازش سریع و یا ابررایانه‌ها دسترسی فراوان دارند و محک‌های خود را در چنین ساختارهایی انجام داده‌اند درصورتی‌که در پژوهش ما کاربرانی در نظر گرفته شده‌اند که شبیه‌سازی‌ها را در رایانهٔ شخصی معمولی انجام می‌دهند و به ابررایانه‌ها و یا رایانه‌های کوانتومی واقعی دسترسی ندارند. در کنار تمامی موارد اشاره شده، در طول پژوهش، ابزاری\LTRfootnote{\url{https://github.com/ahmadrv/QSB}} توسعه داده شده است که پژوهش‌های آینده در این زمینه را به سمت استانداردسازی هدایت می‌کند و فرآیند محک را آسان‌تر و سریع‌تر به پیش می‌برد.
+در پژوهش ما برای بهبود ضعف‌های موجود، مبناهای محک شبیه‌ساز به‌طورکلی متفاوت و جامع در نظر گرفته شده است. کارهای پیشین، اغلب به محک رایانه‌های واقعی کوانتومی پرداخته‌اند و توجه خاص به شبیه‌سازها کم‌تر دیده می‌شود. در اندک پژوهش‌هایی که به شبیه‌سازها نیز توجه کرده‌اند، معیارهای انتخاب‌شده برای محک، معیارهای مطلوبی در نظر گرفته نشده است. مطلوب از این بابت است که معیارها عموماً برای محک سخت‌افزار و عملکرد گیت‌ها به‌صورت مجزا انتخاب شده‌اند. معیارهای مطلوب معیارهایی هستند که برای محک شبیه‌سازها در زمان اجرای الگوریتم‌ها و بررسی عملکرد آن‌ها به‌طوری‌که همهٔ جنبه‌های مربوطه از تبدیل محاسبات کوانتومی به محاسبات کلاسیک تا ذخیره‌ٔ اطلاعات بدست آمده، در آن‌ها بررسی شود. علاوه‌بر معیار، با تعریف روش‌های بهتر محک، می‌توان به معیارهای مهم نظیر زمان اجرا و میزان مصرف حافظه، توجه ویژه‌ای داشت. در روش‌های محک شبیه‌سازها نیز کم‌تر به الگوریتم‌هایی که مسائل واقعی را حل می‌کنند توجه شده است درصورتی‌که مبنای محک در پژوهش ما انتخاب الگوریتم‌هایی بوده است که از آن در حل مسائل واقعی استفاده می‌شود. علاوه بر این‌ها، فرض پژوهش‌های پیشین بر آن بوده است که کاربران شبیه‌سازها تماماً به رایانه‌های پردازش سریع و یا ابررایانه‌ها دسترسی فراوان دارند و محک‌های خود را در چنین ساختارهایی انجام داده‌اند درصورتی‌که در پژوهش ما کاربرانی در نظر گرفته شده‌اند که شبیه‌سازی‌ها را در رایانهٔ شخصی معمولی انجام می‌دهند و به ابررایانه‌ها و یا رایانه‌های کوانتومی واقعی دسترسی ندارند. در کنار تمامی موارد اشاره شده، در طول پژوهش، ابزاری\LTRfootnote{\url{https://github.com/ahmadrv/QSB}} توسعه داده شده است که پژوهش‌های آینده در این زمینه را به سمت استانداردسازی هدایت می‌کند و فرآیند محک را آسان‌تر و سریع‌تر به پیش می‌برد.
 
 \section{دستاوردها}
 در پژوهش ما ابزار
@@ -44,7 +43,7 @@
 	\centering
 	\captionsetup{justification=centering,margin*=0.5cm}
 	\input{images/Cirq_cirq_pure_runtime.tex}
-	\caption{
+	\caption[نمودار زمان اجرا Cirq]{
 	نمودار زمان اجرا بر حسب تعداد کیوبیت در الگوریتم‌های مختلف در شبیه‌ساز Cirq}
 	\label{fig:1}
 \end{figure}
