--- a/chapter_2.tex
+++ b/chapter_2.tex
@@ -69,7 +69,7 @@
 یک نمایش هندسی، تجسم کرد. هر نقطه روی سطح این نمایش هندسی، نشان‌دهندهٔ یک حالت خالص کوانتومی است. حالت‌های خاص مانند $|0\rangle$ و $|1\rangle$ در قطب‌های شمال و جنوب کره قرار دارند، درحالی‌که حالات دیگر روی سطح پراکنده‌اند.
 
 \subsection{اندازه‌گیری و اصل ناپیوستگی}
-یکی از تفاوت‌های کلیدی بین محاسبات کلاسیک و کوانتومی در نحوهٔ پردازش اطلاعات کوانتومی در طول اندازه‌گیری است. برخلاف اندازه‌گیری‌های کلاسیک که اطلاعات را بدون تأثیر بر سامانه اندازه‌گیری می‌کنند، اندازه‌گیری در سامانه‌های کوانتومی می‌تواند حالت کوانتومی را تغییر دهد یا به‌اصطلاح ناهمدوس کند.
+یکی از تفاوت‌های کلیدی بین محاسبات کلاسیک و کوانتومی در نحوهٔ پردازش اطلاعات کوانتومی در طول اندازه‌گیری است. برخلاف اندازه‌گیری‌های کلاسیک که اطلاعات را بدون تأثیر بر سامانه اندازه‌گیری می‌کنند، اندازه‌گیری در سامانه‌های کوانتومی می‌تواند حالت کوانتومی را تغییر دهد یا به‌اصطلاح ناهمدوس\LTRfootnote{Decoherence } کند.
 
 هنگامی که یک کیوبیت اندازه‌گیری می‌شود، حالت آن به یکی از دو حالت پایه‌ای $|0\rangle$ یا $|1\rangle$ به‌اصطلاح، فرومی‌ریزد. احتمال اندازه‌گیری هر حالت پایه‌ای با مربع اندازه دامنهٔ مربوطه تعیین می‌شود. این اصل ناپیوستگی به این معناست که نمی‌توانیم قبل از اندازه‌گیری پیش‌بینی قطعی از نتیجه اندازه‌گیری داشته باشیم، بلکه فقط احتمالات ممکن را می‌توانیم محاسبه کنیم.
 
