--- a/chapter_4.tex
+++ b/chapter_4.tex
@@ -19,7 +19,7 @@
  	\centering
  	\captionsetup{justification=centering,margin=2cm}
  	\includegraphics[scale=1]{images/backend_simulator_relation.pdf}
- 	\caption{
+ 	\caption[نمودار روابط پلتفرم‌ها و اجزای آن‌ها]{
  	نمودار روابط پلتفرم‌ها و اجزای آن‌ها (قسمت‌های خاکستری در پژوهش ما مورد بحث و بررسی نبوده‌اند.)
  	}
  	\label{fig:2}
@@ -77,17 +77,23 @@
 	\centering
 	\captionsetup{justification=centering}
 	\input{images/Qiskit_aer_aer_simulator_runtime.tex}
-	\caption{
+	\caption[نمودار زمان اجرا \lr{Aer Simulator}]{
 		نمودار زمان اجرا بر حسب تعداد کیوبیت الگوریتم‌های مختلف در
 		\lr{Aer Simulator}
+		\newline \textit{
+		توضیحات: دلیل عدم مشاهد‌هٔ واضح نمودار بعضی از الگوریتم‌ها، شباهت رفتاری شبیه‌ساز در اجرای آن‌ها است.
+		}
 		}
 	\label{fig:3}
-	\vspace{2cm}
+	\vspace{1cm}
 	\captionsetup{justification=centering}
 	\input{images/Qiskit_aer_aer_simulator_memory_usage.tex}
-	\caption{
+	\caption[نمودار مصرف حافظه \lr{Aer Simulator}]{
 		نمودار مصرف حافظه بر حسب تعداد کیوبیت الگوریتم‌های مختلف
 		\lr{Aer Simulator}
+		\newline \textit{
+			توضیحات: دلیل عدم مشاهد‌هٔ واضح نمودار بعضی از الگوریتم‌ها، شباهت رفتاری شبیه‌ساز در اجرای آن‌ها است.
+		}
 		}
 	\label{fig:4}
 \end{figure}
@@ -106,17 +112,23 @@
 	\centering
 	\captionsetup{justification=centering}
 	\input{images/Qiskit_aer_qasm_simulator_runtime.tex}
-	\caption{
+	\caption[نمودار زمان اجرا \lr{Qasm Simulator}]{
 		نمودار زمان اجرا بر حسب تعداد کیوبیت الگوریتم‌های مختلف در 
 		\lr{Qasm Simulator}
+		\newline \textit{
+			توضیحات: دلیل عدم مشاهد‌هٔ واضح نمودار بعضی از الگوریتم‌ها، شباهت رفتاری شبیه‌ساز در اجرای آن‌ها است.
+		}
 		}
 	\label{fig:5}
-	\vspace{2cm}
+	\vspace{1cm}
 	\captionsetup{justification=centering}
 	\input{images/Qiskit_aer_qasm_simulator_memory_usage.tex}
-	\caption{
+	\caption[نمودار مصرف حافظه \lr{Qasm Simulator}]{
 		نمودار مصرف حافظه بر حسب تعداد کیوبیت الگوریتم‌های مختلف در
 		\lr{Qasm Simulator}
+		\newline \textit{
+			توضیحات: دلیل عدم مشاهد‌هٔ واضح نمودار بعضی از الگوریتم‌ها، شباهت رفتاری شبیه‌ساز در اجرای آن‌ها است.
+		}
 		}
 	\label{fig:6}
 \end{figure}
@@ -162,17 +174,23 @@
 	\centering
 	\captionsetup{justification=centering}
 	\input{images/Qiskit_ddsim_qasm_simulator_runtime.tex}
-	\caption{
+	\caption[نمودار زمان اجرا \lr{DDSIM Qasm Simulator}]{
 		نمودار زمان اجرا بر حسب تعداد کیوبیت الگوریتم‌های مختلف در
 		\lr{DDSIM Qasm Simulator}
+		\newline \textit{
+			توضیحات: دلیل عدم مشاهد‌هٔ واضح نمودار بعضی از الگوریتم‌ها، شباهت رفتاری شبیه‌ساز در اجرای آن‌ها است.
+		}
 		}
 	\label{fig:7}
-	\vspace{2cm}
+	\vspace{1cm}
 	\captionsetup{justification=centering}
 	\input{images/Qiskit_ddsim_qasm_simulator_memory_usage.tex}
-	\caption{
+	\caption[نمودار مصرف حافظه \lr{DDSIM Qasm Simulator}]{
 		نمودار مصرف حافظه بر حسب تعداد کیوبیت الگوریتم‌های مختلف در
 		\lr{DDSIM Qasm Simulator}
+		\newline \textit{
+			توضیحات: دلیل عدم مشاهد‌هٔ واضح نمودار بعضی از الگوریتم‌ها، شباهت رفتاری شبیه‌ساز در اجرای آن‌ها است.
+		}
 		}
 	\label{fig:8}
 \end{figure}
@@ -216,17 +234,23 @@
 	\centering
 	\captionsetup{justification=centering}
 	\input{images/Qiskit_ddsim_hybrid_qasm_simulator_runtime.tex}
-	\caption{
+	\caption[نمودار زمان اجرا \lr{DDSIM Hybrid Qasm Simulator}]{
 		نمودار زمان اجرا بر حسب تعداد کیوبیت الگوریتم‌های مختلف در
 		\lr{DDSIM Hybrid Qasm Simulator}
+		\newline \textit{
+			توضیحات: دلیل عدم مشاهد‌هٔ واضح نمودار بعضی از الگوریتم‌ها، شباهت رفتاری شبیه‌ساز در اجرای آن‌ها است.
+		}
 	}
 	\label{fig:9}
-	\vspace{2cm}
+	\vspace{1cm}
 	\captionsetup{justification=centering}
 	\input{images/Qiskit_ddsim_hybrid_qasm_simulator_memory_usage.tex}
-	\caption{
+	\caption[نمودار مصرف حافظه \lr{DDSIM Hybrid Qasm Simulator}]{
 		نمودار مصرف حافظه بر حسب تعداد کیوبیت الگوریتم‌های مختلف در
 		\lr{DDSIM Hybrid Qasm Simulator}
+		\newline \textit{
+			توضیحات: دلیل عدم مشاهد‌هٔ واضح نمودار بعضی از الگوریتم‌ها، شباهت رفتاری شبیه‌ساز در اجرای آن‌ها است.
+		}
 	}
 	\label{fig:10}
 \end{figure}
@@ -263,17 +287,23 @@
 	\centering
 	\captionsetup{justification=centering}
 	\input{images/Cirq_cirq_pure_runtime.tex}
-	\caption{
+	\caption[نمودار زمان اجرا \lr{Cirq Pure}]{
 		نمودار زمان اجرا بر حسب تعداد کیوبیت الگوریتم‌های مختلف در
 		\lr{Cirq Pure}
+		\newline \textit{
+			توضیحات: دلیل عدم مشاهد‌هٔ واضح نمودار بعضی از الگوریتم‌ها، شباهت رفتاری شبیه‌ساز در اجرای آن‌ها است.
+		}
 	}
 	\label{fig:11}
-	\vspace{2cm}
+	\vspace{1cm}
 	\captionsetup{justification=centering}
 	\input{images/Cirq_cirq_pure_memory_usage.tex}
-	\caption{
+	\caption[نمودار مصرف حافظه \lr{Cirq Pure}]{
 		نمودار مصرف حافظه بر حسب تعداد کیوبیت الگوریتم‌های مختلف در
 		\lr{Cirq Pure}
+		\newline \textit{
+			توضیحات: دلیل عدم مشاهد‌هٔ واضح نمودار بعضی از الگوریتم‌ها، شباهت رفتاری شبیه‌ساز در اجرای آن‌ها است.
+		}
 	}
 	\label{fig:12}
 \end{figure}
@@ -316,17 +346,23 @@
 	\centering
 	\captionsetup{justification=centering}
 	\input{images/Cirq_qsimcirq_QSimSimulator_runtime.tex}
-	\caption{
+	\caption[نمودار زمان اجرا \lr{QSim Simulator}]{
 		نمودار زمان اجرا بر حسب تعداد کیوبیت الگوریتم‌های مختلف در
 		\lr{QSim Simulator}
+		\newline \textit{
+			توضیحات: دلیل عدم مشاهد‌هٔ واضح نمودار بعضی از الگوریتم‌ها، شباهت رفتاری شبیه‌ساز در اجرای آن‌ها است.
+		}
 	}
 	\label{fig:13}
-	\vspace{2cm}
+	\vspace{1cm}
 	\captionsetup{justification=centering}
 	\input{images/Cirq_qsimcirq_QSimSimulator_memory_usage.tex}
-	\caption{
+	\caption[نمودار مصرف حافظه \lr{QSim Simulator}]{
 		نمودار مصرف حافظه بر حسب تعداد کیوبیت الگوریتم‌های مختلف در
 		\lr{QSim Simulator}
+		\newline \textit{
+			توضیحات: دلیل عدم مشاهد‌هٔ واضح نمودار بعضی از الگوریتم‌ها، شباهت رفتاری شبیه‌ساز در اجرای آن‌ها است.
+		}
 	}
 	\label{fig:14}
 \end{figure}
@@ -395,7 +431,6 @@ $p+r+s=k$،
 به عنوان یک مسئلهٔ بسیار دشوار مطرح شده است، افزایش توان محاسباتی تأثیر به نسبت مناسبی نخواهد داشت. برای مثال با دوبرابر کردن توان سخت‌افزاری، زمان اجرای شبیه‌سازها نصف نخواهد شد. تحقیق و توسعه شبیه‌سازهایی نظیر
 \lr{QasmSimulator (DDSIM)}،
 کمک شایانی به پیشرفت در این حوزه خواهد بود.
-\ttodo[color=LimeGreen]{This part should be checked.}
  
 \begin{figure}
 	\centering
@@ -438,7 +473,7 @@ $p+r+s=k$،
 	\end{subfigure}
 	
 	\captionsetup{justification=centering}
-	\caption{
+	\caption[نمودار زمان اجرای الگوریتم‌ها]{
 		 نمودار زمان اجرای الگوریتم‌های بررسی‌شده بر روی تمامی شبیه‌سازها.\newline \textit{توضیحات: دلیل عدم مشاهد‌هٔ واضح نمودار بعضی از شبیه‌سازها، هم‌پوشانی و شباهت رفتاری آن‌ها با دیگر شبیه‌سازهاست. محور افقی نشان‌دهندهٔ تعداد کیوبیت است.}
 	}
 	\label{fig:4.1}
@@ -485,7 +520,7 @@ $p+r+s=k$،
 	\end{subfigure}
 	
 	\captionsetup{justification=centering}
-	\caption{
+	\caption[نمودار مصرف حافظهٔ اجرای الگوریتم‌ها]{
 		نمودار مصرف حافظهٔ اجرای الگوریتم‌های بررسی‌شده بر روی تمامی شبیه‌سازها.\newline \textit{توضیحات: دلیل عدم مشاهد‌هٔ واضح نمودار بعضی از شبیه‌سازها، هم‌پوشانی و شباهت رفتاری آن‌ها با دیگر شبیه‌سازهاست. محور افقی نشان‌دهندهٔ تعداد کیوبیت است.}
 	}
 	\label{fig:4.2}
@@ -494,7 +529,6 @@ $p+r+s=k$،
 \section{پژوهش‌های آتی}
 محک شبیه‌سازها فرایندی زمان‌بر و پیچیده است چرا که هر شبیه‌ساز از روش، زبان
 برنامه‌نویسی، تناسب با سخت‌افزار، رویکردهای بهینه‌سازی متفاوت استفاده کرده است. این که بتوان با وجود تمام این تفاوت‌ها یک ابزار و یک چارچوب معین تعیین کرد، هدف نهایی پژوهش‌های نظیر پژوهش ما است. به عنوان پژوهش آتی می‌توان بر روی طراحی دقیق یک مترجم جامع که بتواند فقط با یک بار پیاده‌سازی الگوریتم‌های محک، آن‌ها را به زبان‌های قابل فهم انواع شبیه‌ساز‌ها ترجمه کند، تمرکز کرد. به علاوه، شبیه‌سازهایی که از روش‌ نمودار تصمیم برای شبیه‌سازی بهره برده‌اند،‌ قابلیت نویدبخشی از خود نشان داده‌اند. توسعه‌ و بهبود آن‌ها می‌تواند پژوهش ارزشمندی را به ارمغان آورد.
-\ttodo[color=LimeGreen]{This part should be checked.}
 
 
 
