--- a/definitions.tex
+++ b/definitions.tex
@@ -37,6 +37,7 @@
 \usepackage{xcolor}
 \usepackage{array}
 \usepackage{caption}
+\captionsetup[figure]{font=scriptsize}
 \usepackage{subcaption}
 
 
