v14 - Persian abstract edited

--- a/abstract_fa.tex
+++ b/abstract_fa.tex
@@ -1,12 +1,10 @@
-عدم دسترسی به رایانه‌های کوانتومی منجر به توسعهٔ شبیه‌سازهای آن‌ها شده است. نوپایی این توسعه و تفاوت در مفاهیم بنیادی محاسبات کوانتومی، پیچیدگی زیادی در این فرایند به وجود آورده است. محک شبیه‌سازهای مدار کوانتومی برای شناخت بهتر این پیچیدگی‌ها، هدف پژوهش ما بوده است. این محک با اجرای الگوریتم‌های شناخته‌شدهٔ کوانتومی نظیر
-\lr{Shor}
-و
-\lr{Grover}
-در دو سامانهٔ معروف 
-\lr{Qiskit}
-و
-\lr{Cirq}
-و اندازه‌گیری زمان اجرا و میزان مصرف حافظهٔ آن‌ها، به‌طوری‌که این اندازه‌گیری‌ها منصفانه باشد، صورت‌گرفته است. شبیه‌سازهایی که در سامانهٔ
-\lr{Qiskit}
-وجود دارند، به خصوص شبیه‌سازهایی که از روش نمودارهای تصمیم برای شبیه‌ساز استفاده کرده‌اند، زمان اجرای کمتری را به ثبت رسانده‌اند. از نگاه کاربری که می‌خواهد شبیه‌سازی‌ها را با رایانهٔ شخصی انجام دهد، نتایج یافت‌شده حاکی از آن است که بستگی به نوع الگوریتم باید شبیه‌سازهای متفاوت برای اجرای آن‌ها انتخاب شود تا نتایج مطلوب‌تری حاصل شود. به‌علاوه، با رصد این محک‌ها می‌توان برای بهبود ناتوانی‌های شبیه‌سازها گام برداشت.
+عدم دسترسی به رایانه‌های کوانتومی منجر به توسعهٔ شبیه‌سازهای آن‌ها شده است. نوپایی این توسعه و تفاوت در مفاهیم بنیادی محاسبات کوانتومی، پیچیدگی زیادی در این فرایند به وجود آورده است. محک شبیه‌سازهای مدار کوانتومی برای شناخت بهتر این پیچیدگی‌ها، هدف پژوهش ما بوده است. در محک‌های انجام‌شده، بهترین عملکرد را شبیه‌ساز
+\lr{QasmSimulator (DDSIM)}
+چه از نظر زمان اجرا و چه از نظر مصرف حافظه داشته است. با توجه به یکی از نتایج بدست آمده، اجرای الگوریتم
+\lr{Quantum Fourier Transform}
+توسط
+\lr{QasmSimulator (Qiskit)}
+تا ۲۹ کیوبیت در زمان اجرای کمتر از ۱۰۰۰ ثانیه انجام شده است و در این در حالی است که
+\lr{QasmSimulator (DDSIM)}
+به طور میانگین با افزایش ۵ ثانیه‌ای زمان اجرا توانسته مصرف حافظه را تا یک‌دهم کاهش دهد. از نگاه کاربری که می‌خواهد شبیه‌سازی‌ها را با رایانهٔ شخصی انجام دهد، نتایج یافت‌شده حاکی از آن است که بستگی به نوع الگوریتم باید شبیه‌سازهای متفاوت برای اجرای آن‌ها انتخاب شود تا نتایج مطلوب‌تری حاصل شود. با رصد این محک‌ها می‌توان برای بهبود ناتوانی‌های شبیه‌سازها نیز گام‌های مهمی برداشت.
 \keywords{محک، شبیه‌سازی، رایانش کوانتومی}
